word wrap fix for social app

--- a/react-app-dev/src/components/Projects/NodeSocial/Chat/Chat.css
+++ b/react-app-dev/src/components/Projects/NodeSocial/Chat/Chat.css
@@ -22,6 +22,8 @@
 }
 
 .output {
+  display: inline-block;
+  word-break: break-word;
   flex: 1;
   border-bottom: 1px solid hsla(0,0%,100%,.06);
 }
